--- a/doc-gen/templates/material/styles/main.css
+++ b/doc-gen/templates/material/styles/main.css
@@ -1,8 +1,8 @@
 body {
     color: #34393e;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', Georgia, 'Times New Roman', Times, serif;
     line-height: 1.5;
-    font-size: 16px;
+    font-size: 13px;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
     word-wrap: break-word
@@ -23,7 +23,7 @@ h2 {
 
 h3 {
     font-weight: 600;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 1.8;
 }
 
